fix not-displayed ship images on ios

--- a/frontend/src/components/FleetManager.css
+++ b/frontend/src/components/FleetManager.css
@@ -29,6 +29,14 @@
   content: "";
 }
 
+.ship img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .ship.active:before {
   opacity: 0.5;
 }
